SettingGoogle: Sync pocket settings

--- a/SettingsGoogle/res/xml/display_settings.xml
+++ b/SettingsGoogle/res/xml/display_settings.xml
@@ -174,6 +174,11 @@
             android:summary="@string/tap_to_wake_summary"
             android:title="@string/tap_to_wake" />
 
+        <SwitchPreference
+            android:key="pocket_judge"
+            android:title="@string/pocket_judge_title"
+            android:summary="@string/pocket_judge_summary" />
+
         <com.android.settings.custom.preference.SystemSettingSwitchPreference
             android:key="high_touch_polling_rate_enable"
             android:title="@string/high_touch_polling_rate_title"
