--- a/SettingsGoogle/res/xml/display_settings.xml
+++ b/SettingsGoogle/res/xml/display_settings.xml
@@ -174,6 +174,13 @@
             android:summary="@string/tap_to_wake_summary"
             android:title="@string/tap_to_wake" />
 
+        <Preference
+            android:key="display_cutout_force_fullscreen_settings"
+            android:title="@string/display_cutout_force_fullscreen_title"
+            android:summary="@string/display_cutout_force_fullscreen_summary"
+            android:fragment="com.android.settings.display.DisplayCutoutForceFullscreenSettings"
+            settings:controller="com.android.settings.display.DisplayCutoutForceFullscreenPreferenceController" />
+
         <SwitchPreference
             android:key="pocket_judge"
             android:title="@string/pocket_judge_title"
