--- a/SettingsGoogle/res/xml/power_usage_summary.xml
+++ b/SettingsGoogle/res/xml/power_usage_summary.xml
@@ -6,14 +6,16 @@
     android:title="@string/power_usage_summary_title"
     settings:keywords="@string/keywords_battery">
 
-    <com.android.settingslib.widget.UsageProgressBarPreference
+ <com.android.settingslib.widget.UsageProgressBarPreference
         android:key="battery_header"
+        android:order="-7"
         android:selectable="false"
         android:title="@string/summary_placeholder"
         settings:controller="com.android.settings.fuelgauge.BatteryHeaderPreferenceController" />
 
     <com.android.settingslib.widget.LayoutPreference
         android:key="battery_help_message"
+        android:order="-6"
         android:layout="@layout/preference_battery_error"
         settings:searchable="false">
 
@@ -23,33 +25,39 @@
 
     </com.android.settingslib.widget.LayoutPreference>
 
-    <com.android.settings.widget.CardPreference
+<com.android.settings.widget.CardPreference
         android:key="battery_tip"
+        android:order="-5"
         android:title="@string/summary_placeholder"
         settings:controller="com.android.settings.fuelgauge.batterytip.BatteryTipPreferenceController" />
 
     <Preference
         android:fragment="com.android.settings.fuelgauge.batteryusage.PowerUsageAdvanced"
         android:key="battery_usage_summary"
+        android:order="-4"
         android:summary="@string/advanced_battery_preference_summary"
         android:title="@string/advanced_battery_preference_title"
         settings:searchable="false" />
 
     <com.android.settings.custom.preference.SystemSettingSwitchPreference
         android:key="battery_24_hrs_stats"
-        android:title="@string/advanced_battery_preference_summary_with_hours"
+        android:order="-3"
+        android:title="@string/advanced_battery_preference_summary_google"
+        android:summary="@string/advanced_battery_preference_google_summary"
         android:defaultValue="false"
         settings:searchable="false" />
 
     <Preference
         android:fragment="com.android.settings.fuelgauge.batterysaver.BatterySaverSettings"
         android:key="battery_saver_summary"
+        android:order="-2"
         android:title="@string/battery_saver"
         settings:controller="com.android.settings.fuelgauge.BatterySaverController" />
 
     <Preference
         android:fragment="com.android.settings.fuelgauge.SmartBatterySettings"
         android:key="smart_battery_manager"
+        android:order="-1"
         android:title="@string/smart_battery_manager_title"
         settings:controller="com.android.settings.fuelgauge.batterytip.BatteryManagerPreferenceController"
         settings:keywords="@string/keywords_battery_adaptive_preferences"
@@ -58,31 +66,55 @@
     <Preference
         android:fragment="com.google.android.settings.fuelgauge.reversecharging.ReverseChargingDashboardFragment"
         android:key="reverse_charging"
+        android:order="0"
         android:title="@string/reverse_charging_title"
         settings:controller="com.google.android.settings.fuelgauge.reversecharging.ReverseChargingPreferenceController"
         settings:keywords="@string/keywords_battery_share_settings"
         settings:searchable="true" />
 
+
     <!-- Battery light -->
     <SwitchPreference
         android:key="battery_light_enabled"
+        android:order="1"
         android:title="@string/battery_light_title"
         settings:controller="com.android.settings.notification.BatteryLightPreferenceController"/>
 
-    <SwitchPreference
+    <!--<SwitchPreference
         android:key="battery_percentage"
+        android:order="2"
         android:summary="@string/battery_percentage_description"
         android:title="@string/battery_percentage"
-        settings:controller="com.android.settings.display.BatteryPercentagePreferenceController" />
+        settings:controller="com.android.settings.display.BatteryPercentagePreferenceController" />-->
 
     <SwitchPreference
         android:key="fast_charging"
+        android:order="3"
         android:title="@string/fast_charging_title"
         android:summary="@string/fast_charging_summary"
         settings:controller="com.android.settings.fuelgauge.FastChargingPreferenceController"/>
 
+        <Preference
+        android:key="app_battery_usage"
+        android:order="4"
+        android:title="@string/app_battery_usage_title"
+        android:summary="@string/app_battery_usage_summary"
+        settings:controller="com.android.settings.applications.AppBatteryUsagePreferenceController"
+        android:fragment="com.android.settings.applications.manageapplications.ManageApplications">
+        <extra
+        android:name="classname"
+        android:value="com.android.settings.Settings$AppBatteryUsageActivity"/>
+    </Preference>
+    
+    <com.android.settings.fuelgauge.batteryusage.PowerGaugePreference
+        android:key="battery_temp"
+        android:order="5"
+        android:title="@string/battery_temp"
+        android:selectable="false" />
+
     <com.android.settingslib.widget.FooterPreference
         android:key="power_usage_footer"
+        android:order="100"
         android:selectable="false"
         android:title="@string/battery_footer_summary"
         settings:searchable="false" />
